[gd_scene load_steps=18 format=3 uid="uid://d1xrywv7d6oqs"]

[ext_resource type="PackedScene" uid="uid://23cc1xm0v5jp" path="res://characters/enemy/enemy_walker.tscn" id="1_dq4xu"]
[ext_resource type="AudioStream" uid="uid://c2b7napty0xqn" path="res://audio/sounds/squawk_1.wav" id="2_tvmrg"]
[ext_resource type="AudioStream" uid="uid://k7akmwtrmxvr" path="res://audio/sounds/squawk_2.wav" id="3_pt6f2"]
[ext_resource type="Texture2D" uid="uid://b1ffa310elr21" path="res://characters/enemy/paroot/paroot_drop_3.png" id="4_8siu7"]
[ext_resource type="Texture2D" uid="uid://smo0g21t470d" path="res://characters/enemy/paroot/paroot_drop_2.png" id="5_xoehj"]
[ext_resource type="Texture2D" uid="uid://bnltgc473omjm" path="res://characters/enemy/paroot/paroot_drop_1.png" id="6_yta1i"]
[ext_resource type="Texture2D" uid="uid://dho6xihx2y1wm" path="res://characters/enemy/paroot/paroot.png" id="7_ih8kl"]
[ext_resource type="Script" path="res://characters/enemy/states/shoot_projectile.gd" id="8_dixk6"]
[ext_resource type="AudioStream" uid="uid://dhmdyxs8ju37v" path="res://audio/sounds/spit.wav" id="9_ky35y"]
[ext_resource type="Script" path="res://characters/enemy/states/walker_idle.gd" id="10_fbocg"]
[ext_resource type="Script" path="res://characters/enemy/states/walker_walk.gd" id="11_h4y0m"]

[sub_resource type="Animation" id="Animation_qnvf2"]
resource_name = "attack"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_4p2fu"]
resource_name = "fall"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_c7te4"]
resource_name = "hurt"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_36q8g"]
resource_name = "idle"
length = 0.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 3, 1]
}

[sub_resource type="Animation" id="Animation_de07x"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i1f5f"]
_data = {
"attack": SubResource("Animation_qnvf2"),
"fall": SubResource("Animation_4p2fu"),
"hurt": SubResource("Animation_c7te4"),
"idle": SubResource("Animation_36q8g"),
"walk": SubResource("Animation_de07x")
}

[node name="Paroot" instance=ExtResource("1_dq4xu")]
hurt_vocalizations = Array[AudioStreamWAV]([ExtResource("2_tvmrg"), ExtResource("3_pt6f2")])
death_pieces = Array[Resource]([ExtResource("4_8siu7"), ExtResource("5_xoehj"), ExtResource("6_yta1i")])
bounty = 2

[node name="Body" parent="Pivot" index="0"]
position = Vector2(-2, -13)
texture = ExtResource("7_ih8kl")

[node name="AnimationPlayer" parent="Pivot" index="1"]
libraries = {
"": SubResource("AnimationLibrary_i1f5f")
}

[node name="BulletSpawn" type="Marker2D" parent="Pivot" index="3"]
position = Vector2(-2, -10)

[node name="player_detector" parent="Pivot" index="4"]
target_position = Vector2(-120, 0)

[node name="StateMachine" parent="." index="3"]
initial_state = NodePath("Idle")

[node name="Attack" type="Node" parent="StateMachine" index="3"]
script = ExtResource("8_dixk6")
attack_sound = ExtResource("9_ky35y")

[node name="Idle" type="Node" parent="StateMachine" index="4"]
script = ExtResource("10_fbocg")

[node name="Move" type="Node" parent="StateMachine" index="5"]
script = ExtResource("11_h4y0m")

[editable path="Hurtbox"]
[editable path="Hitbox"]
